# FPGA-task

./: .gitignore
Sistema-de-Alarme-Digital-com-Simulacao-Visual/: S_Alarme_Dig.sv  circuit.json
ativ_unid_7_cap2/: README.md
ativ_unid_7_cap2/FPGA-CODIG/: Verifica.bat
ativ_unid_7_cap2/FPGA-CODIG/Arquivos/: ativ.lpf  top.sv
ativ_unid_7_cap2/FPGA-CODIG/Projeto/: .recovery  atividade_proj.ldf
ativ_unid_7_cap2/FPGA-CODIG/Projeto/impl1/: .build_status  atividade_proj_impl1.alt  atividade_proj_impl1.areasrr  atividade_proj_impl1.bgn  atividade_proj_impl1.bit  atividade_proj_impl1.edi  atividade_proj_impl1.htm  atividade_proj_impl1.mrp  (+30 more)
ativ_unid_7_cap2/InterfaceFPGA_1/: CMakeLists.txt
ativ_unid_7_cap2/InterfaceFPGA_1/inc/: tarefa_botao_b.h  tarefa_botoes_io.h  tarefa_display_word6.h  tarefa_word6.h
ativ_unid_7_cap2/InterfaceFPGA_1/src/: CMakeLists.txt  digito_teste.c  main.c  tarefa_botao_a.c  tarefa_botao_b.c  tarefa_botao_joy.c  tarefa_display_word6.c  tarefa_led_verde.c  tarefa_word6.c
ativ_unid_7_cap2/InterfaceFPGA_12/: CMakeLists.txt
ativ_unid_7_cap2/InterfaceFPGA_12/inc/: joystick_setup.h  joystick_x_dma.h  joystick_y_dma.h  tarefa_botao_a.h  tarefa_botao_joy.h  tarefa_joystick_eventos.h  tarefa_led_rgb.h  tarefa_word5.h  tarefa_word6.h  tarefa_word_to_gpio.h
ativ_unid_7_cap2/InterfaceFPGA_12/src/: CMakeLists.txt  dma_handlers.c  joystick_setup.c  joystick_x_dma.c  joystick_y_dma.c  main.c  tarefa_botao_a.c  tarefa_botao_b.c  tarefa_botao_joy.c  tarefa_display_word6.c  tarefa_joystick_eventos.c  tarefa_led_rgb.c  tarefa_led_verde.c  tarefa_word5.c  tarefa_word6.c  tarefa_word_to_gpio.c
food_light/: light.vcd  light.vhd  simular_piso.bat  tb_light.vhd
register_8_bits/: flipflop_d.vhd  register_8bit.vhd  register_8bit_simulation.vcd  simular_register.bat  tb_register_8bit.vhd
somador_subtrator/: design.sv  testbenchh.sv
subtratorcompleto/: subtratorcompleto.v  subtratorcompleto.vcd  subtratorcompleto.vvp  subtratorcompleto_tb.v  subtratorcompleto_tb.vvp
unid6_cap1/: run_comparador_4bits.bat  state_machine.vcd  state_machine.vhd  tb_state_machine.vhd  work-obj93.cf
(+64 files in other folders)
